--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/alpha-slider/alpha-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/alpha-slider/alpha-slider.component.scss
@@ -34,4 +34,5 @@ div.mona-alpha-slider-handle {
     cursor: pointer;
     transform: translateX(-100%);
     z-index: 3;
+    border-radius: var(--mona-border-radius);
 }
