--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/hue-slider/hue-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/hue-slider/hue-slider.component.scss
@@ -14,4 +14,5 @@ div.mona-hue-slider-handle {
     width: 14px;
     transform: translateX(-100%);
     cursor: pointer;
+    border-radius: var(--mona-border-radius);
 }
