--- a/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/mona-ui/src/lib/layout/expansion-panel/components/expansion-panel/expansion-panel.component.scss
@@ -1,6 +1,7 @@
 div.mona-expansion-panel {
     background: var(--mona-background);
     border: 1px solid var(--mona-border-color);
+    border-radius: var(--mona-border-radius);
     &.collapsed {
         border-bottom: none;
     }
