--- a/projects/mona-ui/src/lib/buttons/split-button/components/split-button/split-button.component.scss
+++ b/projects/mona-ui/src/lib/buttons/split-button/components/split-button/split-button.component.scss
@@ -3,12 +3,15 @@ div.mona-split-button {
     align-items: center;
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
+    border-radius: var(--mona-border-radius);
     width: fit-content;
     & > [monaButton] {
         height: calc(100% - 2px);
         border: none;
         &:first-child {
             border-right: 1px solid var(--mona-border-color);
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
         }
         &:nth-child(2) {
             & > span {
