--- a/projects/mona-ui/src/lib/layout/avatar/avatar.component.scss
+++ b/projects/mona-ui/src/lib/layout/avatar/avatar.component.scss
@@ -4,6 +4,7 @@ div.mona-avatar {
     justify-content: center;
     user-select: none;
     position: relative;
+    border-radius: var(--mona-border-radius);
     & img {
         width: 100%;
         height: 100%;
