--- a/projects/mona-ui/styles/base.scss
+++ b/projects/mona-ui/styles/base.scss
@@ -34,6 +34,7 @@
     --mona-focus-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) + 18%));
     --mona-primary-border-color: var(--mona-border-color);
     --mona-selected-border-color: var(--mona-primary-border-color);
+    --mona-border-radius: 4px;
 
     --mona-focus-shadow-color: var(--mona-border-color);
     --mona-focus-shadow: 0 0 2px 0 var(--mona-focus-shadow-color);
