--- a/projects/mona-ui/src/lib/buttons/drop-down-button/drop-down-button.component.html
+++ b/projects/mona-ui/src/lib/buttons/drop-down-button/drop-down-button.component.html
@@ -1,7 +1,9 @@
 <button monaButton [disabled]="disabled" #dropdownButton>
     <ng-content></ng-content>
 </button>
-<mona-contextmenu [target]="dropdownButton" [menuItems]="menuItems" [width]="popupWidth()"
-                  trigger="click" popupClass="mona-dropdown-button-popup"
-                  *ngIf="!disabled"
-                  #contextMenuComponent></mona-contextmenu>
+
+@if (!disabled) {
+    <mona-contextmenu [target]="dropdownButton" [menuItems]="menuItems" [width]="popupWidth()"
+                      trigger="click" popupClass="mona-dropdown-button-popup"
+                      #contextMenuComponent></mona-contextmenu>
+}
