--- a/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.html
@@ -3,22 +3,32 @@
      #dropdownWrapper>
     <div class="mona-multi-select-value">
         <div>
-            <mona-chip *ngFor="let item of valuePopupListItem | slice:0:visibleTagCount"
-                       [tabindex]="-1" [removable]="true" (remove)="onSelectedItemRemove($event, item)">
-                <span class="mona-multi-select-label" *ngIf="!tagTemplate">{{item.text}}</span>
-                <ng-container [ngTemplateOutlet]="tagTemplate" [ngTemplateOutletContext]="{$implicit: item.data}" *ngIf="tagTemplate"></ng-container>
-            </mona-chip>
-            <mona-chip [tabindex]="-1" [removable]="true" (remove)="onSelectedItemGroupRemove($event)"
-                       *ngIf="tagCount >= 0 && valuePopupListItem.length > tagCount">
-                <span class="mona-multi-select-label" *ngIf="!summaryTagTemplate">{{summaryTagText}}</span>
-                <ng-container [ngTemplateOutlet]="summaryTagTemplate" [ngTemplateOutletContext]="{$implicit: valuePopupListItem}"
-                              *ngIf="summaryTagTemplate"></ng-container>
-            </mona-chip>
+            @for (item of valuePopupListItem|monaSlice:0:visibleTagCount; track item) {
+                <mona-chip [tabindex]="-1" [removable]="true" (remove)="onSelectedItemRemove($event, item)">
+                    @if (!tagTemplate) {
+                        <span class="mona-multi-select-label" *ngIf="!tagTemplate">{{item.text}}</span>
+                    } @else {
+                        <ng-container [ngTemplateOutlet]="tagTemplate" [ngTemplateOutletContext]="{$implicit: item.data}"></ng-container>
+                    }
+                </mona-chip>
+            }
+
+            @if (tagCount >= 0 && valuePopupListItem.length > tagCount) {
+                <mona-chip [tabindex]="-1" [removable]="true" (remove)="onSelectedItemGroupRemove($event)">
+                    @if (!summaryTagTemplate) {
+                        <span class="mona-multi-select-label">{{summaryTagText}}</span>
+                    } @else {
+                        <ng-container [ngTemplateOutlet]="summaryTagTemplate" [ngTemplateOutletContext]="{$implicit: valuePopupListItem}"></ng-container>
+                    }
+                </mona-chip>
+            }
         </div>
     </div>
-    <span class="mona-input-clear-icon" *ngIf="showClearButton && valuePopupListItem.length !== 0" (click)="clearValue($event)">
-        <fa-icon [icon]="clearIcon"></fa-icon>
-    </span>
+    @if (showClearButton && valuePopupListItem.length !== 0) {
+        <span class="mona-input-clear-icon" (click)="clearValue($event)">
+            <fa-icon [icon]="clearIcon"></fa-icon>
+        </span>
+    }
     <button monaButton class="mona-input-button" (click)="open()">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </button>
@@ -28,18 +38,18 @@
     <div class="mona-dropdown-popup-list-wrapper">
         <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [filterable]="filterable"
                          [value]="popupListValues" selectionMode="multiple" (valueChange)="onPopupListValueChange($event)">
-            <ng-container *ngIf="itemTemplate">
+            @if (itemTemplate) {
                 <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
                     <ng-container [ngTemplateOutlet]="itemTemplate"
                                   [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
                 </ng-template>
-            </ng-container>
-            <ng-container *ngIf="groupTemplate">
+            }
+            @if (groupTemplate) {
                 <ng-template monaListGroupTemplate let-dataItem let-listItem="listItem">
                     <ng-container [ngTemplateOutlet]="groupTemplate"
                                   [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
                 </ng-template>
-            </ng-container>
+            }
         </mona-popup-list>
     </div>
 </ng-template>
