fix: chip padding

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -441,6 +441,9 @@
                                         </mona-menu-item>
                                     </mona-menu-item>
                                 </mona-drop-down-button>
+                                <mona-chip [removable]="false">
+                                    Chip I
+                                </mona-chip>
                             </div>
 
                             <div style="display: flex; align-items: center; margin-top: 40px;">
