--- a/projects/mona-ui/src/lib/buttons/chip/chip.component.scss
+++ b/projects/mona-ui/src/lib/buttons/chip/chip.component.scss
@@ -11,7 +11,7 @@ div.mona-chip-content {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 0 8px;
+    padding: 4px 8px;
 }
 
 span.mona-chip-label {
