fix: dropdowns will now close on subsequent click after they are opened

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -36,7 +36,7 @@
                 <mona-tab [title]="'Grid Tab'">
                     <ng-template monaTabContentTemplate>
                         <div style="padding: 40px;">
-                            <mona-grid [data]="gridOrderData" [pageSize]="5"
+                            <mona-grid [data]="gridOrderDataRandom" [pageSize]="5"
                                        [pageSizeValues]="[5, 10, 15, 20, 25, 50, 100]" style="height: 400px; margin-bottom: 10px;"
                                        [groupable]="true"
                                        [filterable]="true" [filter]="gridFilters"
