fix: refactor and tests for chip

--- a/projects/mona-ui/src/lib/buttons/chip/chip.component.html
+++ b/projects/mona-ui/src/lib/buttons/chip/chip.component.html
@@ -1,5 +1,5 @@
 <div class="mona-chip" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : tabindex">
-    <div class="mona-chip-content" [ngClass]="{'mona-closable-chip': removable}">
+    <div class="mona-chip-content" [ngClass]="{'mona-removable-chip': removable}">
         @if (label) {
             <span class="mona-chip-label">{{label}}</span>
         } @else {
@@ -7,8 +7,8 @@
         }
     </div>
     @if (removable) {
-        <button monaButton [flat]="true" (click)="remove.emit($event)">
-            <span class="mona-chip-close-icon">
+        <button monaButton [flat]="true" class="mona-chip-remove" (click)="remove.emit($event)">
+            <span class="mona-chip-remove-icon">
                 <fa-icon [icon]="closeIcon"></fa-icon>
             </span>
         </button>
