--- a/projects/mona-ui/src/lib/buttons/chip/chip.component.scss
+++ b/projects/mona-ui/src/lib/buttons/chip/chip.component.scss
@@ -26,11 +26,11 @@ button[monaButton] {
     border-bottom-left-radius: 0;
 }
 
-span.mona-chip-close-icon {
+span.mona-chip-remove-icon {
     font-weight: bold;
     font-size: 14px;
 }
 
-div.mona-closable-chip {
+div.mona-removable-chip {
     border-right: 1px solid var(--mona-border-color);
 }
